sfSandBoxCode/force-app/main/default/objects/EPR_Payable_Item__c/EPR_Payable_Item__c.object-meta.xml
<CustomObject>
    <label>EPR Payable Item</label>
    <nameField>
        <displayFormat>EPR ITEM-{0000}</displayFormat>
        <label>EPR Payable Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EPR Payable Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>