sfSandBoxCode/force-app/main/default/objects/EPR_Payable_Item__c/fields/Department_dim1__c.field-meta.xml
<CustomField>
    <fullName>Department_dim1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department (Dim 1)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>dim1</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Name</field>
            <operation>notContain</operation>
            <value>XXX</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Name</field>
            <operation>notContain</operation>
            <value>DO NOT USE</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.isActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>EPR Payable Items (Department)</relationshipLabel>
    <relationshipName>EPR_Payable_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>