sfSandBoxCode/force-app/main/default/objects/EPR_Payable_Item__c/fields/EPR__c.field-meta.xml
<CustomField>
    <fullName>EPR__c</fullName>
    <label>Electronic Payment Request</label>
    <referenceTo>Electronic_Payment_Request__c</referenceTo>
    <relationshipLabel>EPR Payable Items</relationshipLabel>
    <relationshipName>EPR_Payable_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>