sfSandBoxCode/force-app/main/default/objects/EPR_Payable_Item__c/fields/GLA__c.field-meta.xml
<CustomField>
    <fullName>GLA__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The General Ledger Account</description>
    <label>GLA</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>gla</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Name</field>
            <operation>notContain</operation>
            <value>DO NOT USE</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>EPR Payable Items (GLA)</relationshipLabel>
    <relationshipName>EPR_Payable_Items3</relationshipName>
    <type>Lookup</type>
</CustomField>