sfSandBoxCode/force-app/main/default/objects/EPR_Payable_Item__c/fields/Grant_Funding_Availale_dim4__c.field-meta.xml
<CustomField>
    <fullName>Grant_Funding_Availale_dim4__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Grant Funding Availale (Dim 4)</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3) AND 4</booleanFilter>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>dim4</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Name</field>
            <operation>notContain</operation>
            <value>DO NOT USE</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Name</field>
            <operation>notContain</operation>
            <value>XXX</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.isActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>EPR Payable Items (Grant Funding Availale)</relationshipLabel>
    <relationshipName>EPR_Payable_Items2</relationshipName>
    <type>Lookup</type>
</CustomField>