sfSandBoxCode/force-app/main/default/objects/EPR_Payable_Item__c/fields/Gross_price__c.field-meta.xml
<CustomField>
    <fullName>Gross_price__c</fullName>
    <formula>Quantity__c  *  Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>