sfSandBoxCode/force-app/main/default/objects/EPR_Payable_Item__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <label>Item</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>