sfSandBoxCode/force-app/main/default/objects/EPR_Payable_Item__c/fields/Location_Dim2__c.field-meta.xml
<CustomField>
    <fullName>Location_Dim2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location (Dim 2)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>dim2</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Name</field>
            <operation>notContain</operation>
            <value>DO NOT USE</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Name</field>
            <operation>notContain</operation>
            <value>XXX</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.isActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>EPR Payable Items</relationshipLabel>
    <relationshipName>EPR_Payable_Items</relationshipName>
    <type>Lookup</type>
</CustomField>